# CNN-based-Road-Traffic-Sign-and-Light-Recognition

./: CHANGELOG.md  CNN-based-Road-Traffic-Sign-and-Light-Recognition.ipynb  CONTRIBUTING.md  LICENSE  README.md  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: train_config.yaml  uvicorn_log.json
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml  ingress.yaml
docs/architecture/: ARCHITECTURE.md
infrastructure/terraform/: main.tf
monitoring/prometheus/: alert_rules.yml  prometheus.yml
notebooks/: 01_data_pipeline.ipynb  02_model_architecture.ipynb  03_mlops_pipeline.ipynb  04_explainable_ai.ipynb  05_benchmarking_and_optimization.ipynb
scripts/: evaluate.py  load_test.py  train.py
src/api/: app.py  auth.py
src/core/: config.py  exceptions.py  logging.py
src/data/: etl_pipeline.py  preprocessing.py
src/ml/: batch_inference.py  distributed_training.py  evaluation.py  explainability.py  hpo.py  model.py  trainer.py
src/monitoring/: drift.py
src/services/: model_registry.py
src/utils/: caching.py
tests/integration/: test_api.py
tests/unit/: test_core.py
