[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trafficvision-ai"
version = "2.0.0"
description = "Enterprise-grade road traffic sign and light recognition platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TrafficVision-AI Engineering Team"}
]
keywords = ["computer-vision", "object-detection", "autonomous-driving", "deep-learning", "mlops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/your-org/trafficvision-ai"
Documentation = "https://docs.trafficvision.ai"
"Bug Tracker" = "https://github.com/your-org/trafficvision-ai/issues"

[project.scripts]
trafficvision-train = "scripts.train:main"
trafficvision-serve = "scripts.serve:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008", "N803"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
